--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,38 +1,47 @@
-language: node_js   #运行环境为nodejs
-node_js:            #设置版本号
-  - "10"
-cache: npm
+name: auto-generate-gitbook 
+on:                                 #在main分支上进行push时触发     
+  push:     
+    branches:     
+    - main  
 
-notifications:      #通知
-  email:
-    recipients:
-      - juoyohub@gmail.com   #设置通知邮件
-    on_success: change
-    on_failure: always
+jobs:   
+  main-to-gh-pages:     
+    runs-on: ubuntu-latest   
+    
+    steps:
+      - name: checkout main       
+        uses: actions/checkout@v2       
+        with:         
+          ref: main                  
 
-install:                             #install阶段 安装依赖
-  - npm install -g gitbook-cli       #安装gitbook 
-  - gitbook install                  #安装插件
-  - npm install -g gitbook-summary   #使自动生成SUMMARY.md的一个工具
+      - name: install nodejs       
+        uses: actions/setup-node@v1   
 
-script:                              #script阶段 运行脚本
-  - book sm                          #利用安装的工具gitbook-summary自动生成SUMMARY.md文件
-  - gitbook build                    #gitbook编译，生成静态网站站点_book
-  
+      - name: configue gitbook      
+        run: |         
+          npm install -g gitbook-cli                   
+          gitbook install         
+          npm install -g gitbook-summary                     
 
-after_script:                        #script阶段之后执行
-  - cd _book                         #进入_book目录
-  - git init                         
-  - git remote add origin https://${REF}    #设置要托管到的仓库名
-  - git add .                               #添加_book目录下的所有文件
-  - git commit -m "Updated By Travis-CI With Build $TRAVIS_BUILD_NUMBER For Github Pages" 
-  - git branch -M main
-  - git push --force --quiet "https://${TOKEN}@${REF}" main:gh-pages  #强制推送到gh-pages分支
+      - name: generate _book folder       
+        run: |        
+          book sm         
+          gitbook build         
+          cp SUMMARY.md _book                      
 
-branches:
-  only:
-    - main
-
-env:
-  global:
-    - REF=github.com/juoyo/oexambook-in-writing.git # 设置 github 地址
+      - name: push _book to branch gh-pages        
+        env:         
+          TOKEN: ${{ secrets.TOKEN }}         
+          REF: github.com/${{github.repository}}         
+          MYEMAIL: juoyohub@gmail.com                  # ！！记得修改为自己github设置的邮箱         
+          MYNAME: ${{github.repository_owner}}                 
+        run: |         
+          cd _book         
+          git config --global user.email "${MYEMAIL}"         
+          git config --global user.name "${MYNAME}"         
+          git init         
+          git remote add origin https://${REF}         
+          git add .          
+          git commit -m "Updated By Github Actions With Build ${{github.run_number}} of ${{github.workflow}} For Github Pages"         
+          git branch -M main         
+          git push --force --quiet "https://${TOKEN}@${REF}" main:gh-pages
