--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
           MYNAME: ${{github.repository_owner}}                 
         run: |         
           cd _book
-          git config --global init.defaultBranch <name>         
+          git config --global init.defaultBranch main         
           git config --global user.email "${MYEMAIL}"         
           git config --global user.name "${MYNAME}"         
           git init         
