--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,10 +7,14 @@ on:                                 #在main分支上进行push时触发
 jobs:   
   main-to-gh-pages:     
     runs-on: ubuntu-latest   
+
+    strategy:
+      matrix:
+        node-version: [16.x] #指定node版本
     
     steps:
       - name: checkout main       
-        uses: actions/checkout@v2       
+        uses: actions/checkout@v3       
         with:         
           ref: main                  
 
